# cs188-cabinet-door-project

./: .gitignore  COMBINED_DATA_PLAN.md  CURRENT_RESULTS.md  README.md  STATE_AND_NEXT_STEPS.md  TA_RECOMMENDATIONS_PLAN.md  WORKING_RESULTS.md  cs188_final_report.tex  index.html  pyproject.toml  report_outline.md  run_ablations.sh  run_all_evals.sh  style.css  tips_for_friends.md
cabinet_door_project/: ablation_sweep.py  bc_handle.py  compare_bc_vs_diffusion.py  conditioning_experiment.py  diagnose_failure.py  ensemble_eval.py  eval_oracle.py  fast_ablations.py  generate_door_positions.py  generate_media.py  gmm_experiment.py  hybrid_gripper.py  orientation_experiment.py  prepare_dataset.py  preprocess_all_states.py  preprocess_parallel.py  preprocess_target.py  preprocess_target_parallel.py  rapid_iter.py  reactive_bc.py  run_ablations.py  run_experiment.py  run_remaining.py  validate_best.py  validate_best_combined.py  wait_and_run_ablations.sh
cabinet_door_project/diffusion_policy/: __init__.py  config.py  data.py  evaluation.py  inference.py  scheduler.py  training.py
cabinet_door_project/diffusion_policy/models/: __init__.py  mlp.py  transformer.py  unet.py  vision.py
cabinet_door_project/tests/: conftest.py  test_backbones.py  test_data.py  test_evaluation.py  test_inference.py  test_model.py  test_scheduler.py  test_training.py  test_visuomotor.py
noah_code/: 03_teleop_collect_demos.py  06_train_policy.py  07_evaluate_policy.py  08_visualize_policy_rollout.py  policy_utils.py
