[project]
name = "robocasa-door-policy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Pinned: version-sensitive or explicitly required
    "mujoco==3.3.1",
    "numpy==2.2.5",
    "torch==2.7.1",
    "torchvision==0.22.1",

    # Simulation / data
    "gymnasium>=0.29",
    "h5py>=3.16",
    "pyarrow>=23.0",
    "pandas>=3.0",
    "lerobot>=0.3",
    "datasets>=3.6",

    # Policy / ML
    "diffusers>=0.37",
    "einops>=0.8",
    "scipy>=1.15",

    # Perception
    "opencv-python>=4.13",
    "pillow>=12.0",
    "r3m",

    # Infra / logging
    "wandb>=0.25",
    "tensorboard>=2.20",
    "tqdm>=4.67",
    "pyyaml>=6.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",

    # Video
    "imageio>=2.37",
    "imageio-ffmpeg>=0.6",
]

[tool.uv]
# This prevents uv from trying to "manage" the subfolders as part of your project
workspace = { exclude = ["robosuite", "robocasa"] }
